--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Aquarium</title>
+  <title>Characters</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
