Add HTML structure for character page

--- a/character.html
+++ b/character.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Characters</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+    
 <body class="page-sub">
     <div id="header-container"></div>
     <script src="js/loadHeader.js"></script>
