--- a/links.html
+++ b/links.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Links</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Characters</title>
+
+  <!-- ★ ここを必ず入れる -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="css/style.css?v=3">
 </head>
 
 <body class="page-index">
