--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Characters</title>
+  <title>ぎじえのリンク集</title>
 
   <!-- ★ ここを必ず入れる -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
