--- a/character.html
+++ b/character.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Characters</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>ぎじえプロジェクト</title>
+
+  <!-- ★ ここを必ず入れる -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="css/style.css?v=3">
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
