--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
-<body class="page-index">
+<body class="page-links">
 
     <div id="header-container"></div>
     <script src="js/loadHeader.js"></script>
