--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
   
-<body class="page-index">
+<body class="page-about">
 
   <div id="header-container"></div>
   <script src="js/loadHeader.js"></script>
