--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div id="header-container"></div>
     <script src="js/loadHeader.js"></script>
+    <script src="js/loadFooter.js"></script>
 
     <!-- ここから本体 -->
     <main>
