--- a/character.html
+++ b/character.html
@@ -13,6 +13,7 @@
 
   <div id="header-container"></div>
   <script src="js/loadHeader.js"></script>
+  <script src="js/loadFooter.js"></script>
 
   <main>
     <div id="character-content"></div>
