--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 
   <div id="header-container"></div>
   <script src="js/loadHeader.js"></script>
+  <script src="js/loadFooter.js"></script>
 
   <!-- ここから本体 -->
   <main>
