--- a/about.html
+++ b/about.html
@@ -19,7 +19,159 @@
 
   <!-- 本体 -->
   <main>
-    <!-- 必要ならここに説明文や画像などを入れる -->
+    <div class="about-container">
+
+      <!-- タイトル -->
+      <header class="about-header">
+        <h1 class="about-title">ぎじえプロジェクトとは？</h1>
+        <p class="about-lead">
+          「ぎじえ（擬似餌）」をコンセプトに、イラスト・音楽・テキストをゆるく横断しながら展開している個人創作プロジェクトです。
+        </p>
+      </header>
+
+      <!-- 目次 -->
+      <nav class="about-toc" aria-label="ページ内目次">
+        <h2 class="about-toc-title">CONTENTS</h2>
+        <ol>
+          <li><a href="#about-project">プロジェクトの概要</a></li>
+          <li><a href="#about-series">シリーズ全体について</a></li>
+          <li><a href="#about-character">走馬瑠曖（代理キャラ）</a></li>
+          <li><a href="#about-arc">アークについて</a></li>
+          <li><a href="#about-theme">大テーマ一覧</a></li>
+        </ol>
+      </nav>
+
+      <!-- プロジェクト概要 -->
+      <section id="about-project" class="about-section">
+        <h2 class="about-section-title">プロジェクトの概要</h2>
+        <p>
+          ぎじえプロジェクトは、「自分だけの色を探す旅」をテーマにしたマルチメディア創作です。<br>
+          各キャラクターはそれぞれの「色」や「テーマ」「アーク」を持ち、イラスト・音楽・テキストなど様々な媒体で断片的に描かれていきます。
+        </p>
+        <p>
+          物語や設定は、必ずしも一本の長編小説として語られるわけではなく、<br>
+          カード形式のキャラ図鑑・キャラクターソング・短いテキストなどの「かけら」を通して少しずつ見えてくる構造になっています。
+        </p>
+      </section>
+
+      <!-- シリーズ全体 -->
+      <section id="about-series" class="about-section">
+        <h2 class="about-section-title">シリーズ全体について</h2>
+        <p>
+          プロジェクト内には、いくつかのシリーズ（レーベル）のような枠組みがあります。<br>
+          代表的なものとして、代理キャラを複数の世界線で描くシリーズ
+          <strong>「0_Occupation / そまりものがたり」</strong> があります。
+        </p>
+        <p>
+          そまりものがたりでは、走馬瑠曖（そうま・るあ）という同一人物が、別々の職業・立場・色を持ったキャラクターとして登場します。<br>
+          それぞれは別人のように見えますが、根っこの部分では「同じ人の別ルート」という扱いです。
+        </p>
+        <p>
+          このほかにも、「こころものがたり」「あそびものがたり」「めぐりものがたり」など、<br>
+          感情・遊び・季節／記念日など、切り口の異なるシリーズが存在します。
+        </p>
+      </section>
+
+      <!-- 走馬瑠曖 -->
+      <section id="about-character" class="about-section">
+        <h2 class="about-section-title">走馬瑠曖（そうま・るあ）について</h2>
+        <p>
+          プロジェクト全体の代理キャラクターが、<strong>走馬瑠曖（そうま・るあ）</strong>です。<br>
+          そまりものがたりを中心に、「別世界線の自分」としてさまざまな姿で登場します。
+        </p>
+        <p>
+          各キャラクターは、LUREベースの共通した顔立ち・雰囲気を持ちつつ、<br>
+          職業や色、ファッションモチーフによって大きく印象が変わるようにデザインされています。
+        </p>
+      </section>
+
+      <!-- アーク一覧 -->
+      <section id="about-arc" class="about-section">
+        <h2 class="about-section-title">アークについて</h2>
+        <p>
+          アークは、キャラクターの「属性」や「生き方のベクトル」を表す分類記号です。<br>
+          バトル的な有利不利ではなく、性質や物語上の立ち位置を示すためのタグとして使っています。<br>
+          各キャラは基本的に <strong>エクスアーク</strong> と <strong>コアアーク</strong> の2つを持ちます。
+        </p>
+
+        <div class="about-arc-list">
+          <div class="about-arc-item">🔥 ブレイズ（Blaze / B / λ）</div>
+          <div class="about-arc-item">🎭 フォグ（Fog / F / ~）</div>
+          <div class="about-arc-item">⚙️ ギア（Gear / G / ☆）</div>
+          <div class="about-arc-item">🪢 ノット（Knot / K / +）</div>
+          <div class="about-arc-item">🎨 モード（Mode / M / □）</div>
+          <div class="about-arc-item">🔈 ノイズ（Noise / N / Ω）</div>
+          <div class="about-arc-item">⛓️ オース（Oath / O / ◯）</div>
+          <div class="about-arc-item">📐 プロトコル（Protocol / P / △）</div>
+          <div class="about-arc-item">🪞 クオート（Quote / Q / ＊）</div>
+          <div class="about-arc-item">🧵 リール（Reel / R / ⌶）</div>
+          <div class="about-arc-item">⚓️ シェイド（Shade / S / ↓）</div>
+          <div class="about-arc-item">🌀 ボイド（Void / V / Φ）</div>
+        </div>
+      </section>
+
+      <!-- 大テーマ一覧 -->
+      <section id="about-theme" class="about-section">
+        <h2 class="about-section-title">大テーマ一覧</h2>
+        <p>
+          各キャラクター／作品には、「どんな種類の物語か」を示す大きなテーマが割り振られています。<br>
+          ここでは代表的な10種類の大テーマを簡単にまとめています。
+        </p>
+
+        <div class="about-theme-grid">
+          <div class="about-theme-item">
+            <h3>0_Occupation<br><span class="about-theme-sub">そまりものがたり</span></h3>
+            <p>職業・属性に関するテーマ。別世界線の走馬瑠曖たちが登場するメインシリーズ。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>1_Instinct<br><span class="about-theme-sub">こころものがたり</span></h3>
+            <p>感情や欲望など、人間の内面を扱うシリーズ。本能因子と呼ばれる6文字コードで整理されます。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>2_Zone</h3>
+            <p>ゲーム・スポーツ・遊びに関するテーマ。競技や勝負の「場」がキーワードになります。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>3_Element<br><span class="about-theme-sub">ものがたり</span></h3>
+            <p>エレメント・鉱石・花など、自然物や素材をモチーフにしたテーマ。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>4_Anniversary<br><span class="about-theme-sub">めぐりものがたり</span></h3>
+            <p>季節行事や記念日、歴史的な日付など「めぐり」を扱うテーマ。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>5_Savor<br><span class="about-theme-sub">たべものがたり</span></h3>
+            <p>食べ物・飲み物をモチーフにしたテーマ。色や質感のイメージと相性が良い領域です。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>6_Galaxy</h3>
+            <p>宇宙・天体・星座など、スケールの大きい空間を扱うテーマ。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>7_Language</h3>
+            <p>言語・文字・文化・言葉遊びに関するテーマ。記号やコードとも相性が良い領域です。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>8_Beast<br><span class="about-theme-sub">けものものがたり</span></h3>
+            <p>動物や干支など、生き物モチーフを扱うテーマ。</p>
+          </div>
+
+          <div class="about-theme-item">
+            <h3>9_Pattern</h3>
+            <p>模様や素材など、質感・パターンを主役にしたテーマ。装飾性の高いデザイン向け。</p>
+          </div>
+        </div>
+      </section>
+
+    </div>
   </main>
 
   <!-- フッター -->
