--- a/about.html
+++ b/about.html
@@ -95,22 +95,22 @@
         </p>
 
         <div class="about-arc-list">
-          <div class="about-arc-item">🔥 ブレイズ（Blaze / B / λ）</div>
-          <div class="about-arc-item">🎭 フォグ（Fog / F / ~）</div>
-          <div class="about-arc-item">⚙️ ギア（Gear / G / ☆）</div>
-          <div class="about-arc-item">🪢 ノット（Knot / K / +）</div>
-          <div class="about-arc-item">🎨 モード（Mode / M / □）</div>
-          <div class="about-arc-item">🔈 ノイズ（Noise / N / Ω）</div>
-          <div class="about-arc-item">⛓️ オース（Oath / O / ◯）</div>
-          <div class="about-arc-item">📐 プロトコル（Protocol / P / △）</div>
-          <div class="about-arc-item">🪞 クオート（Quote / Q / ＊）</div>
-          <div class="about-arc-item">🧵 リール（Reel / R / ⌶）</div>
-          <div class="about-arc-item">⚓️ シェイド（Shade / S / ↓）</div>
-          <div class="about-arc-item">🌀 ボイド（Void / V / Φ）</div>
+          <div class="about-arc-item">🔥 ブレイズ（Blaze）</div>
+          <div class="about-arc-item">🎭 フォグ（Fog）</div>
+          <div class="about-arc-item">⚙️ ギア（Gear）</div>
+          <div class="about-arc-item">🪢 ノット（Knot）</div>
+          <div class="about-arc-item">🎨 モード（Mode）</div>
+          <div class="about-arc-item">🔈 ノイズ（Noise）</div>
+          <div class="about-arc-item">⛓️ オース（Oath）</div>
+          <div class="about-arc-item">📐 プロトコル（Protocol）</div>
+          <div class="about-arc-item">🪞 クオート（Quote）</div>
+          <div class="about-arc-item">🧵 リール（Reel）</div>
+          <div class="about-arc-item">⚓️ シェイド（Shade）</div>
+          <div class="about-arc-item">🌀 ボイド（Void）</div>
         </div>
       </section>
 
-      <!-- 大テーマ一覧 -->
+      <!-- シリーズ一覧 -->
       <section id="about-theme" class="about-section">
         <h2 class="about-section-title">大テーマ一覧</h2>
         <p>
@@ -121,52 +121,52 @@
         <div class="about-theme-grid">
           <div class="about-theme-item">
             <h3>0_Occupation<br><span class="about-theme-sub">そまりものがたり</span></h3>
-            <p>職業・属性に関するテーマ。別世界線の走馬瑠曖たちが登場するメインシリーズ。</p>
+            <p>職業や立場、特定の属性を表すテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>1_Instinct<br><span class="about-theme-sub">こころものがたり</span></h3>
-            <p>感情や欲望など、人間の内面を扱うシリーズ。本能因子と呼ばれる6文字コードで整理されます。</p>
+            <p>人間の感情や欲望を象徴するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>2_Zone</h3>
-            <p>ゲーム・スポーツ・遊びに関するテーマ。競技や勝負の「場」がキーワードになります。</p>
+            <p>遊びや競技、勝負に関するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>3_Element<br><span class="about-theme-sub">ものがたり</span></h3>
-            <p>エレメント・鉱石・花など、自然物や素材をモチーフにしたテーマ。</p>
+            <p>自然の要素、鉱物、植物を扱うテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>4_Anniversary<br><span class="about-theme-sub">めぐりものがたり</span></h3>
-            <p>季節行事や記念日、歴史的な日付など「めぐり」を扱うテーマ。</p>
+            <p>季節行事や歴史的出来事を扱うテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>5_Savor<br><span class="about-theme-sub">たべものがたり</span></h3>
-            <p>食べ物・飲み物をモチーフにしたテーマ。色や質感のイメージと相性が良い領域です。</p>
+            <p>食品や飲料に関するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>6_Galaxy</h3>
-            <p>宇宙・天体・星座など、スケールの大きい空間を扱うテーマ。</p>
+            <p>宇宙や天体、星座に関するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>7_Language</h3>
-            <p>言語・文字・文化・言葉遊びに関するテーマ。記号やコードとも相性が良い領域です。</p>
+            <p>言語や文字、言葉にまつわる文化・芸術・記号に関するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>8_Beast<br><span class="about-theme-sub">けものものがたり</span></h3>
-            <p>動物や干支など、生き物モチーフを扱うテーマ。</p>
+            <p>動物や干支に関するテーマ</p>
           </div>
 
           <div class="about-theme-item">
             <h3>9_Pattern</h3>
-            <p>模様や素材など、質感・パターンを主役にしたテーマ。装飾性の高いデザイン向け。</p>
+            <p>模様・材質に関するテーマ</p>
           </div>
         </div>
       </section>
