--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
     <section class="about-toc" id="about-toc">
       <h2>目次</h2>
       <ul class="about-toc-list">
-        <li><a href="#about-guide">② 初めての方へ</a></li>
-        <li><a href="#about-series">③ シリーズについて</a></li>
-        <li><a href="#about-karma">④ カルマとは</a></li>
-        <li><a href="#about-media">⑤ テキストとキャラソンの関係</a></li>
-        <li><a href="#about-arc">⑥ アーク一覧</a></li>
-        <li><a href="#about-theme">⑦ 大テーマ一覧</a></li>
+        <li><a href="#about-guide">初めての方へ</a></li>
+        <li><a href="#about-series">シリーズについて</a></li>
+        <li><a href="#about-karma">カルマとは</a></li>
+        <li><a href="#about-media">テキストとキャラソンの関係</a></li>
+        <li><a href="#about-arc">アーク一覧</a></li>
+        <li><a href="#about-theme">大テーマ一覧</a></li>
       </ul>
     </section>
 
@@ -62,7 +62,7 @@
       <h3>1. キャラクターカード</h3>
       <p>1枚の中に「象徴・色・テーマ」が凝縮された名刺のような存在です。</p>
 
-      <h3>2. テキスト（短文）</h3>
+      <h3>2. テキスト・小説</h3>
       <p>キャラクターの“カルマ”や心の動きを描く断片的な文章です。</p>
 
       <h3>3. キャラソン</h3>
@@ -80,7 +80,6 @@
       <p>
         特に中心となる「そまりものがたり」は、
         色やテーマをもとにキャラクターの世界線を描くメインシリーズです。
-        全キャラクターは “別世界線の走馬瑠曖（そうま・るあ）” として存在します。
       </p>
     </section>
 
@@ -122,20 +121,20 @@
         カルマが内面だとすれば、アークは <strong>外側から見える特徴</strong> を表します。
       </p>
 
-<div class="about-arc-list">
-  <div class="about-arc-item">🔥 ブレイズ（Blaze）</div>
-  <div class="about-arc-item">🎭 フォグ（Fog）</div>
-  <div class="about-arc-item">⚙️ ギア（Gear）</div>
-  <div class="about-arc-item">🪢 ノット（Knot）</div>
-  <div class="about-arc-item">🎨 モード（Mode）</div>
-  <div class="about-arc-item">🔈 ノイズ（Noise）</div>
-  <div class="about-arc-item">⛓️ オース（Oath）</div>
-  <div class="about-arc-item">📐 プロトコル（Protocol）</div>
-  <div class="about-arc-item">🪞 クオート（Quote）</div>
-  <div class="about-arc-item">🧵 リール（Reel）</div>
-  <div class="about-arc-item">⚓️ シェイド（Shade）</div>
-  <div class="about-arc-item">🌀 ボイド（Void）</div>
-</div>
+      <div class="about-arc-list">
+        <div class="about-arc-item">🔥 ブレイズ（Blaze）</div>
+        <div class="about-arc-item">🎭 フォグ（Fog）</div>
+        <div class="about-arc-item">⚙️ ギア（Gear）</div>
+        <div class="about-arc-item">🪢 ノット（Knot）</div>
+        <div class="about-arc-item">🎨 モード（Mode）</div>
+        <div class="about-arc-item">🔈 ノイズ（Noise）</div>
+        <div class="about-arc-item">⛓️ オース（Oath）</div>
+        <div class="about-arc-item">📐 プロトコル（Protocol）</div>
+        <div class="about-arc-item">🪞 クオート（Quote）</div>
+        <div class="about-arc-item">🧵 リール（Reel）</div>
+        <div class="about-arc-item">⚓️ シェイド（Shade）</div>
+        <div class="about-arc-item">🌀 ボイド（Void）</div>
+      </div>
     </section>
 
     <!-- ⑧ 大テーマ一覧 -->
