--- a/about.html
+++ b/about.html
@@ -159,12 +159,12 @@
   </div>
 
   <div class="about-theme-item">
-    <h3>2_Zone</h3>
+    <h3>2_Zone<br><span class="about-theme-sub">あそびものがたり</span></h3>
     <p>遊びや競技、勝負に関するテーマ</p>
   </div>
 
   <div class="about-theme-item">
-    <h3>3_Element<br><span class="about-theme-sub">ものがたり</span></h3>
+    <h3>3_Element<br><span class="about-theme-sub">もとものがたり</span></h3>
     <p>自然の要素、鉱物、植物を扱うテーマ</p>
   </div>
 
@@ -179,12 +179,12 @@
   </div>
 
   <div class="about-theme-item">
-    <h3>6_Galaxy</h3>
+    <h3>6_Galaxy<br><span class="about-theme-sub">そらものがたり</span></h3>
     <p>宇宙や天体、星座に関するテーマ</p>
   </div>
 
   <div class="about-theme-item">
-    <h3>7_Language</h3>
+    <h3>7_Language<br><span class="about-theme-sub">ことばものがたり</span></h3>
     <p>言語や文字、文化・記号に関するテーマ</p>
   </div>
 
@@ -194,7 +194,7 @@
   </div>
 
   <div class="about-theme-item">
-    <h3>9_Pattern</h3>
+    <h3>9_Pattern<br><span class="about-theme-sub">もようものがたり</span></h3>
     <p>模様・材質に関するテーマ</p>
   </div>
 
