--- a/about.html
+++ b/about.html
@@ -122,18 +122,7 @@
       </p>
 
       <div class="about-arc-list">
-        <div class="about-arc-item">🔥 ブレイズ（Blaze）</div>
-        <div class="about-arc-item">🎭 フォグ（Fog）</div>
-        <div class="about-arc-item">⚙️ ギア（Gear）</div>
-        <div class="about-arc-item">🪢 ノット（Knot）</div>
-        <div class="about-arc-item">🎨 モード（Mode）</div>
-        <div class="about-arc-item">🔈 ノイズ（Noise）</div>
-        <div class="about-arc-item">⛓️ オース（Oath）</div>
-        <div class="about-arc-item">📐 プロトコル（Protocol）</div>
-        <div class="about-arc-item">🪞 クオート（Quote）</div>
-        <div class="about-arc-item">🧵 リール（Reel）</div>
-        <div class="about-arc-item">⚓️ シェイド（Shade）</div>
-        <div class="about-arc-item">🌀 ボイド（Void）</div>
+ 
       </div>
     </section>
 
@@ -148,55 +137,7 @@
 
  <div class="about-theme-grid">
 
-  <div class="about-theme-item">
-    <h3>0_Occupation<br><span class="about-theme-sub">そまりものがたり</span></h3>
-    <p>職業や立場、特定の属性を表すテーマ</p>
-  </div>
 
-  <div class="about-theme-item">
-    <h3>1_Instinct<br><span class="about-theme-sub">こころものがたり</span></h3>
-    <p>人間の感情や欲望を象徴するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>2_Zone<br><span class="about-theme-sub">あそびものがたり</span></h3>
-    <p>遊びや競技、勝負に関するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>3_Element<br><span class="about-theme-sub">もとものがたり</span></h3>
-    <p>自然の要素、鉱物、植物を扱うテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>4_Anniversary<br><span class="about-theme-sub">めぐりものがたり</span></h3>
-    <p>季節行事や歴史的出来事を扱うテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>5_Savor<br><span class="about-theme-sub">たべものがたり</span></h3>
-    <p>食品や飲料に関するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>6_Galaxy<br><span class="about-theme-sub">そらものがたり</span></h3>
-    <p>宇宙や天体、星座に関するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>7_Language<br><span class="about-theme-sub">ことばものがたり</span></h3>
-    <p>言語や文字、文化・記号に関するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>8_Beast<br><span class="about-theme-sub">けものものがたり</span></h3>
-    <p>動物や干支に関するテーマ</p>
-  </div>
-
-  <div class="about-theme-item">
-    <h3>9_Pattern<br><span class="about-theme-sub">もようものがたり</span></h3>
-    <p>模様・材質に関するテーマ</p>
-  </div>
 
 </div>
     </section>
@@ -209,6 +150,10 @@
   <!-- JS（必ず最後にまとめて） -->
   <script src="js/loadHeader.js"></script>
   <script src="js/loadFooter.js"></script>
+  <script src="js/about.js"></script>  <!-- ★追加 -->
+  
+</body>
+</html>
 
 </body>
 </html>
