--- a/character.html
+++ b/character.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Character Detail</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <link rel="stylesheet" href="css/style.css?v=4">
   <link rel="stylesheet"
