--- a/links.html
+++ b/links.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>OFFICIAL LINKS</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <link rel="stylesheet" href="css/style.css?v=4">
   <link rel="stylesheet"
