--- a/index.html
+++ b/index.html
@@ -61,21 +61,41 @@
       </section>
 
       <!-- 3. シリーズ（世界線） -->
-      <section class="help-section">
-        <h3>3. シリーズ（世界線）について</h3>
-        <p>
-          すべてのキャラクターは、全10種のシリーズ（世界線）のどれかに属しています。
-          シリーズごとに「職業」「感情」「遊び」「季節」など、テーマの切り口が変わります。
-        </p>
-        <ul>
-          <li><strong>0_Occupation：</strong> そまりものがたり（職業）</li>
-          <li><strong>1_Instinct：</strong> こころものがたり（感情）</li>
-          <li><strong>…</strong> など</li>
-        </ul>
-        <p class="help-link">
-          詳しい一覧は <a href="about.html#about-theme">ABOUT &gt; シリーズ一覧</a> から。
-        </p>
-      </section>
+<section class="help-section">
+  <h3>1. キャラクターカードの見方</h3>
+
+  <div class="help-card-demo">
+    <!-- 疑似カード本体 -->
+    <div class="help-card-frame">
+      <div class="help-card-inner"></div>
+    </div>
+
+    <!-- ラベルたち -->
+    <div class="hc-label hc-series">
+      <div class="hc-badge">∞</div>
+      <div class="hc-text">シリーズ</div>
+    </div>
+
+    <div class="hc-label hc-ex">
+      <div class="hc-badge">EX</div>
+      <div class="hc-text">エクスアーク</div>
+    </div>
+
+    <div class="hc-label hc-code">
+      <div class="hc-badge">000</div>
+      <div class="hc-text">コード</div>
+    </div>
+
+    <div class="hc-label hc-core">
+      <div class="hc-badge">CO</div>
+      <div class="hc-text">コアアーク</div>
+    </div>
+  </div>
+
+  <p class="help-note">
+    1枚のカードの四隅に「シリーズ」「エクスアーク」「コアアーク」「コード」が配置されています。
+  </p>
+</section>
     </div>
   </div>
 </div>
