--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- スマホ対応 -->
   <meta name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover">
+        content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <link rel="stylesheet" href="css/style.css?v=3">
   <link rel="stylesheet"
@@ -18,21 +18,61 @@
   <div id="header-container"></div>
 
   <!-- 本体 -->
-  <main>
+  <main class="l-main">
     <div id="card-list"></div>
   </main>
 
-  <!-- フッター：★これを追加 -->
+  <!-- フッター -->
   <div id="footer-container"></div>
-<!-- ヘルプオーバーレイ（INDEX専用） -->
-<div id="help-overlay" aria-hidden="true">
-  <div id="help-modal" role="dialog" aria-modal="true" aria-labelledby="help-title">
-    <header id="help-header">
-      <h2 id="help-title">ぎじえPRJの見方ガイド</h2>
-      <button id="help-close" aria-label="ヘルプを閉じる">&times;</button>
-    </header>
 
+  <!-- ヘルプオーバーレイ（INDEX専用） -->
+  <div id="help-overlay" aria-hidden="true">
+    <div id="help-modal" role="dialog" aria-modal="true" aria-labelledby="help-title">
+      <header id="help-header">
+        <h2 id="help-title">ぎじえPRJの見方ガイド</h2>
+        <button id="help-close" aria-label="ヘルプを閉じる">&times;</button>
+      </header>
 
+      <div id="help-body">
+        <!-- 1. カードの見方（カード図版だけ） -->
+        <section class="help-section">
+          <h3>1. キャラクターカードの見方</h3>
+
+          <div class="help-card-demo">
+            <!-- 疑似カード本体 -->
+            <div class="help-card-frame">
+              <div class="help-card-inner"></div>
+            </div>
+
+            <!-- ラベルたち -->
+            <div class="hc-label hc-series">
+              <div class="hc-badge">∞</div>
+              <div class="hc-text">シリーズ</div>
+            </div>
+
+            <div class="hc-label hc-ex">
+              <div class="hc-badge">EX</div>
+              <div class="hc-text">エクスアーク</div>
+            </div>
+
+            <div class="hc-label hc-code">
+              <div class="hc-badge">000</div>
+              <div class="hc-text">コード</div>
+            </div>
+
+            <div class="hc-label hc-core">
+              <div class="hc-badge">CO</div>
+              <div class="hc-text">コアアーク</div>
+            </div>
+          </div>
+
+          <p class="help-note">
+            1枚のカードの四隅に「シリーズ」「エクスアーク」「コアアーク」「コード」が配置されています。
+          </p>
+        </section>
+      </div>
+    </div>
+  </div>
 
   <!-- 検索ポップアップ -->
   <div id="search-overlay">
@@ -51,16 +91,16 @@
         >
       </div>
 
-      <div class="search-filter-group">
-        <div class="filter-block">
-          <div class="filter-label">シリーズ</div>
-          <div class="filter-options" id="filter-series-options"></div>
-        </div>
+      <!-- フィルタ（シリーズ） -->
+      <div class="filter-group">
+        <div class="filter-group-title">シリーズ</div>
+        <div class="filter-options" id="filter-series-options"></div>
+      </div>
 
-        <div class="filter-block">
-          <div class="filter-label">アーク</div>
-          <div class="filter-options" id="filter-arc-options"></div>
-        </div>
+      <!-- フィルタ（アーク） -->
+      <div class="filter-group">
+        <div class="filter-group-title">アーク</div>
+        <div class="filter-options" id="filter-arc-options"></div>
       </div>
 
       <div class="search-btn-row">
