--- a/links.html
+++ b/links.html
@@ -2,11 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>OFFICIAL LINKS</title>
+  <title>OFFICIAL LINKS | ぎじえプロジェクト</title>
 
+  <!-- スマホ対応 -->
   <meta name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover">
+        content="width=device-width, initial-scale=1, viewport-fit=cover">
 
+  <!-- 共通スタイル -->
   <link rel="stylesheet" href="css/style.css?v=4">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -14,7 +16,7 @@
 
 <body class="page-links">
 
-  <!-- ヘッダー -->
+  <!-- ヘッダー（共通コンポーネント） -->
   <div id="header-container"></div>
 
   <!-- 本体 -->
@@ -22,17 +24,17 @@
     <header class="links-header">
       <h1 class="links-title">OFFICIAL</h1>
       <p class="links-lead">
-        ぎじえプロジェクト（Project LURE）に関連する公式アカウントやショップなど、  
+        ぎじえプロジェクト（Project LURE）に関連する公式アカウントやショップなど、<br>
         外部サービスへの「入口」をまとめたページです。<br>
-        個別の作品リンクは、各キャラクターのギャラリーセクションに掲載しています。
+        個別の作品リンクは、各キャラクターの GALLERY セクションに掲載しています。
       </p>
     </header>
 
-    <!-- ここに JS でプラットフォーム別ブロックが入る -->
+    <!-- officialLinks.json から JS でプラットフォーム別ブロックを生成 -->
     <div id="links-container"></div>
   </main>
 
-  <!-- フッター -->
+  <!-- フッター（共通コンポーネント） -->
   <div id="footer-container"></div>
 
   <!-- JS（最後に） -->
