--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title>ぎじえプロジェクトとは？</title>
 
-  <!-- スマホ対応 -->
   <meta name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover">
+        content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <!-- 共通スタイル -->
   <link rel="stylesheet" href="css/style.css?v=4">
@@ -22,7 +21,7 @@
   <!-- 本体 -->
   <main class="about-page">
 
-    <!-- ① はじめに（導入：フラット） -->
+    <!-- ① 導入 -->
     <section class="about-intro" id="about-intro">
       <h1>ぎじえプロジェクトとは？</h1>
       <p>
@@ -34,12 +33,10 @@
         物語を一本の時間軸で語るのではなく、
         キャラクターが持つ「色」「テーマ」「カルマ」を軸に、
         さまざまな世界線（シリーズ）が並行して展開されます。
-        読者は提示される断片を自由に拾い、
-        自分なりの順番で世界を理解していく形式です。
       </p>
     </section>
 
-    <!-- ② 目次（導入と同じレベルでフラット） -->
+    <!-- ② 目次 -->
     <section class="about-toc" id="about-toc">
       <h2>目次</h2>
       <ul class="about-toc-list">
@@ -52,35 +49,35 @@
       </ul>
     </section>
 
-    <!-- ③ 初めての方へ（カード形式） -->
+    <!-- ③ 初めての方へ -->
     <section class="about-section" id="about-guide">
       <h2>初めての方へ</h2>
       <p>
-        ぎじえPRJは、断片を集めていくことで全体像が見えてくる構造です。
-        初めて触れる方は、以下の順で読むと理解しやすくなっています。
+        ぎじえPRJは、断片を集めることで全体像が見えてくる構造です。
+        初めて触れる方は、以下の順で読むと理解がスムーズです。
       </p>
 
       <h3>1. キャラクターカード</h3>
-      <p>1枚の中に「象徴・色・テーマ」が凝縮された名刺のような存在です。</p>
+      <p>1枚に「象徴・色・テーマ」が凝縮された名刺のような存在です。</p>
 
       <h3>2. テキスト・小説</h3>
       <p>キャラクターの“カルマ”や心の動きを描く断片的な文章です。</p>
 
       <h3>3. キャラソン</h3>
-      <p>テキストで描かれた感情や衝動を音として翻訳した表現です。</p>
+      <p>テキストの感情や衝動を音として翻訳した表現です。</p>
     </section>
 
-    <!-- ④ シリーズ全体（世界線構造） -->
+    <!-- ④ シリーズについて -->
     <section class="about-section" id="about-series">
       <h2>シリーズについて</h2>
       <p>
         ぎじえPRJには複数のシリーズ（世界線）が存在します。
-        各シリーズは、キャラクターの色・テーマ・カルマの見せ方が異なり、
-        “別の角度から同一人物を見る”ためのレイヤーとして機能します。
+        各シリーズは、キャラクターの「色・テーマ・カルマ」の見せ方が異なり、
+        “別角度から同一人物を見る”ためのレイヤーとして機能します。
       </p>
       <p>
-        特に中心となる「そまりものがたり」は、
-        色やテーマをもとにキャラクターの世界線を描くメインシリーズです。
+        中心となる「そまりものがたり」は、
+        色やテーマをもとにしたキャラ世界線の基本軸となります。
       </p>
     </section>
 
@@ -88,13 +85,13 @@
     <section class="about-section" id="about-karma">
       <h2>カルマとは</h2>
       <p>
-        カルマとは、キャラクターを動かす“根源的な動機”のことです。
+        カルマとは、キャラクターを動かす“根源的な動機”です。
         願望・恐れ・歪み・諦念など、
-        「なぜそのキャラがその色で、そのテーマで生きているのか」を形づくります。
+        「なぜそのキャラがその色で、そのテーマで生きているのか」を規定します。
       </p>
       <p>
-        カルマは、カードタイトル・キャッチコピー・テキスト・キャラソンなど、
-        キャラクター表現すべてに影響する最重要設定です。
+        カルマは、カードのタイトル・テキスト・キャラソンすべてに影響する
+        最重要設定です。
       </p>
     </section>
 
@@ -103,55 +100,48 @@
       <h2>テキストとキャラソンの関係</h2>
       <p>
         ぎじえPRJでは、短いテキストで描かれる“カルマの物語”が、
-        そのままキャラソンへ感情として転写される構造になっています。
+        キャラソンにそのまま感情として転写されます。
       </p>
       <ul>
-        <li><strong>テキスト：</strong> 出来事よりも「生き方や歪み」を描く断片</li>
-        <li><strong>キャラソン：</strong> その断片を内面の“音”として表現したもの</li>
+        <li><strong>テキスト：</strong> 出来事よりも内面を描く断片</li>
+        <li><strong>キャラソン：</strong> その断片を“音”として翻訳したもの</li>
       </ul>
-      <p>
-        二つを合わせて読むことで、キャラクターの世界が立体的に理解できます。
-      </p>
     </section>
 
     <!-- ⑦ アーク一覧 -->
     <section class="about-section" id="about-arc">
       <h2>アーク（属性）一覧</h2>
       <p>
-        アークは、キャラクターが持つ“性質・傾向・分類”を視覚的に示すための要素です。
-        カルマが内面だとすれば、アークは <strong>外側から見える特徴</strong> を表します。
+        アークはキャラクターの“外側から見える性質”を示す分類です。
       </p>
 
       <div class="about-arc-list">
- 
+        <!-- JS about.js がここへ挿入 -->
       </div>
     </section>
 
     <!-- ⑧ 大テーマ一覧 -->
     <section class="about-section" id="about-theme">
-      <h2>シリーズ一覧</h2>
+      <h2>大テーマ一覧</h2>
       <p>
-        全キャラクターは全10種の「シリーズ」に属しています。
-        属性・季節・文化・感情などをもとに、
-        キャラクターの象徴や世界観を理解しやすくする分類です。
+        キャラクターはすべて全10種のシリーズのいずれかに分類されます。
+        世界観の理解を助けるためのカテゴリです。
       </p>
 
- <div class="about-theme-grid">
-
-
-
-</div>
+      <div class="about-theme-grid">
+        <!-- JS about.js がここへ挿入 -->
+      </div>
     </section>
 
   </main>
 
-  <!-- フッター（共通） -->
+  <!-- フッター -->
   <div id="footer-container"></div>
 
-  <!-- JS（必ず最後にまとめて） -->
+  <!-- JS -->
   <script src="js/loadHeader.js"></script>
   <script src="js/loadFooter.js"></script>
-  <script src="js/about.js"></script>  <!-- ★追加 -->
-  
+  <script src="js/about.js"></script>
+
 </body>
 </html>
